2007-06-13  Lars Knoll <lars@trolltech.com>

        Reviewed by Niko

        Implement the parts required for the JS bridge
        to know about the plugins.

        * WebCore.pro:
        * platform/qt/PlugInInfoStoreQt.cpp: Added.
        (WebCore::PlugInInfoStore::createPluginInfoForPluginAtIndex):
        (WebCore::PlugInInfoStore::pluginCount):
        (WebCore::PlugInInfoStore::supportsMIMEType):
        (WebCore::refreshPlugins):
        * platform/qt/TemporaryLinkStubs.cpp:

2007-06-10  Holger Hans Peter Freyther  <zecke@selfish.org>

         Reviewed by Maciej.
 
         Disable whole-view editing for the Gdk port in order to improve the browsing experience.
 
         * platform/gdk/EditorClientGdk.cpp:
         (WebCore::EditorClientGdk::isEditable): Return false to disable whole-view editing
 
2007-06-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=14044
        Autogenerate the JS bindings for HTMLCollection

        - also moves JSHTMLAllCollection into it's own file.

        * DerivedSources.make:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSHTMLAllCollection.h: Added.
        (WebCore::JSHTMLAllCollection::JSHTMLAllCollection):
        (WebCore::JSHTMLAllCollection::toBoolean):
        (WebCore::JSHTMLAllCollection::masqueradeAsUndefined):
        * bindings/js/JSHTMLCollectionCustom.cpp: Added.
        (WebCore::getNamedItems):
        (WebCore::JSHTMLCollection::callAsFunction):
        (WebCore::JSHTMLCollection::implementsCall):
        (WebCore::JSHTMLCollection::canGetItemsForName):
        (WebCore::JSHTMLCollection::nameGetter):
        (WebCore::JSHTMLCollection::item):
        (WebCore::JSHTMLCollection::namedItem):
        (WebCore::toJS):
        * bindings/js/JSHTMLDocumentCustom.cpp:
        (WebCore::JSHTMLDocument::nameGetter):
        (WebCore::JSHTMLDocument::all):
        * bindings/js/JSXMLHttpRequest.cpp: